# smart-floors-external

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/actions/publish-beagle-docker/: action.yml
.github/actions/publish-docker/: action.yml
.github/actions/publish-py-img-docker/: action.yml
.github/actions/publish-sg-img-docker/: action.yml
.github/workflows/: wf-build-and-publish.yml  wf-deploy-env-tar.yml  wf-deploy-tar-to-s3.yml  wf-on-push-and-pr.yml  wf-publish-img-to-ecr.yml  wf-publish-sg-img-to-ecr.yml  wf-trigger-sagemaker-lambda.yml  wf-upload-empty-model.yml
bid_optim_etl_py/: applovin_etl.py  applovin_model_publish.py  applovin_model_publish.sh  applovin_model_publisher.sh  applovin_percentile_calculator.py  applovin_train_runner.py  applovin_train_runner.sh  cfg_parser.py  cloudwatch_wrapper.py  command_line_args.py  constants.py  create_empty_model.py  cw_publisher.py  nearest_ad_unit_predictor.py
bid_optim_etl_py/confs/: eu-west-1.conf  us-east-1.conf
bid_optim_etl_py/helpers/: __init__.py  applovin_management_api_client.py  aws_helpers.py  data_helpers.py  metica_management_api_client.py
bid_optim_etl_py/notebooks/: XGBFR_bandit.ipynb
bid_optim_etl_py/spark/: iceberg.py
bid_optim_etl_py/utils/: management_api.py
sagemaker-inference/: Dockerfile  model_handler.py
sagemaker_inference/: config.properties  dockerd-entrypoint.py  log4j.xml
scripts/: check_s3_access.py  quick_s3_check.py  s3_access_summary.py  test_specific_prefix.py  test_update_script.py  update_bid_floor_values.py  upload_empty_model.sh
tests/: conftest.py  test_applovin_etl.py  test_applovin_model_train.py  test_applovin_predictor.py  test_management_api.py  test_model_handler.py  test_nearest_ad_unit_predictor.py  test_update_bid_floor_values.py
tests/resources/confs/: local.conf
