[project]
name = "bid-floor-update-external"
version = "1.0.0"
description = "External script for updating AppLovin bid floors"
authors = [
    { name = "Subash Prabanantham", email = "subash@metica.com" },
    { name = "Rowan Swiers", email = "rowan@metica.com" },
    { name = "Andrew Maher", email = "andrew@metica.com" },
]
requires-python = ">=3.10,<3.12"
readme = "README.md"
dependencies = [
    "requests",
]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
